--- a/browser/resources/settings/brave_wallet_page/brave_wallet_page.html
+++ b/browser/resources/settings/brave_wallet_page/brave_wallet_page.html
@@ -3,6 +3,7 @@
 
 <link rel="import" href="chrome://resources/html/i18n_behavior.html">
 <link rel="import" href="chrome://resources/html/web_ui_listener_behavior.html">
+<link rel="import" href="wallet_networks_subpage.html">
 <link rel="import" href="brave_wallet_browser_proxy.html">
 <script type="module" src="../settings_page/settings_section.js"></script>
 <script type="module" src="../settings_shared_css.js"></script>
@@ -61,6 +62,24 @@
       >
       </cr-input>
     </div>
+    <settings-animated-pages id="wallet-networks" section="wallet">
+      <div route-path="default">
+        <cr-link-row id="walletNetworksLinkRow" start-icon="settings20:arrow"
+          class="hr" label="$i18n{walletNetworksLinkTitle}"
+          sub-label=""
+          on-click="onWalletNetworksEditorClick_"
+          role-description="$i18n{subpageArrowRoleDescription}">
+        </cr-link-row>
+      </div>
+      <template  is="dom-if" route-path="/networks">
+        <settings-subpage
+          associated-control="[[$$('#walletNetworksLinkRow')]]"
+          page-title="$i18n{walletNetworksLinkTitle}">
+          <settings-wallet-networks-subpage>
+          </settings-wallet-networks-subpage>
+        </settings-subpage>
+      </template>
+    </settings-animated-pages>
     <div class="settings-box " on-click="onResetWallet_">
       <div class="flex cr-padded-text reset-wallet">
         <div>$i18n{resetWallet}</div>
